# hook-dash

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: db1a7b55b4f3_initial_schema.py
src/app/: config.py  database.py  dependencies.py  main.py
src/app/api/: auth.py  dashboard.py  endpoints.py  forwarding.py  receiver.py
src/app/models/: __init__.py  endpoint.py  forwarding.py  user.py  webhook_request.py
src/app/schemas/: auth.py  endpoint.py  webhook.py
src/app/services/: auth.py  endpoint.py  forwarding.py  receiver.py
src/app/templates/: base.html  error.html  landing.html
src/app/templates/auth/: login.html  register.html
src/app/templates/dashboard/: index.html
src/app/templates/endpoints/: detail.html  edit.html  list.html  new.html  not_found.html
src/app/templates/forwarding/: logs.html
src/app/templates/partials/: nav.html
tests/: conftest.py  test_auth.py  test_endpoints.py  test_forwarding.py  test_health.py  test_qa.py  test_receiver.py
